# Seal_Demo

./: CMakeLists.txt  README.md  dataMonitor.cpp  dynamicTest.cpp  main.cpp  plcDefine.md  printInfo.cpp  safeCheck.cpp
data/: 7-14-12-27 angles  7-14-12-27 moments  7-14-12-27 vecs  7-14-12-28 angles  7-14-12-28 moments  7-14-12-28 vecs  7-14-12-32 angles  7-14-12-32 moments  7-14-12-32 vecs  7-14-12-34 angles  7-14-12-34 moments  7-14-12-34 vecs  7-14-12-37 angles  7-14-12-37 moments  7-14-12-37 vecs  7-14-13-28 angles  7-14-13-28 moments  7-14-13-28 vecs  7-14-13-29 angles  7-14-13-29 moments  7-14-13-29 vecs  7-14-13-31 angles  7-14-13-31 moments  7-14-13-31 vecs  7-14-13-32 angles  7-14-13-32 moments  7-14-13-32 vecs  7-14-14-11 angles  7-14-14-11 moments  7-14-14-11 vecs  7-14-14-5 angles  7-14-14-5 moments  7-14-14-5 vecs  7-15-16-7 angles  7-15-16-7 moments  7-15-16-7 vecs  7-18-19-37 angles  7-18-19-37 moments  7-18-19-37 vecs  7-18-19-39 angles  (+174 more)
inc/: ADDRESS_DEFINE.h  DATA_STRUCT.h  Data_Log.hpp  Data_Record.h  Driver.h  MONITOR.h  Multi_Process.h  Tc_Ads.h  jointDataProcess.h  logOperation.hpp  monitorData.h  motionDataTransform.hpp  myThreadfuc.h
plcPrgma/Seal/: Seal.project.~u  Seal.sln
plcPrgma/Seal/Seal/: Seal.tsproj  Seal.tsproj.bak  TrialLicense.tclrs
plcPrgma/Seal/Seal/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
plcPrgma/Seal/Seal/plc/: PlcTask.TcTTO  plc.plcproj  plc.tmc
plcPrgma/Seal/Seal/plc/DUTs/: Axis_STATUS.TcDUT  Axis_output.TcDUT
plcPrgma/Seal/Seal/plc/POUs/: MAIN.TcPOU
plcPrgma/Seal/Seal/plc/_CompileInfo/: 93AB4C38-4C99-BE63-9292-8A6A3D4F3A37.compileinfo  A112F986-8F6E-910C-0FE7-D6A50A260BC4.compileinfo
src/: Data_Record.cpp  Driver.cpp  MONITOR.cpp  Multi_Process.cpp  Tc_Ads.cpp  TimerCounter.cpp  jointDataProcess.cpp  monitorData.cpp  myThreadfuc.cpp
twincatPlc/seal/: seal.sln
twincatPlc/seal/seal/: seal.tsproj  seal.tsproj.bak
twincatPlc/seal/seal/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
twincatPlc/seal/seal/plc/: plc.plcproj  plc.tmc
twincatPlc/seal/seal/plc/DUTs/: Axis_OUTPUT.TcDUT  Axis_STATUS.TcDUT
twincatPlc/seal/seal/plc/POUs/: MAIN.TcPOU
twincatPlc/seal/seal/plc/_CompileInfo/: A12C2614-A6EF-8E53-B592-23B1E412F373.compileinfo
(+10 files in other folders)
