cmake_minimum_required(VERSION 3.25)
include_directories(inc)
project(safe_program)
project(printinfo)
project(Seal_Demo)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_EXE_LINKER_FLAGS "-static")
add_library(Tc_Adslib src/Tc_Ads.cpp)
add_library(driverlib src/Driver.cpp)
add_library(mtlib src/MONITOR.cpp)
add_library(dplib src/jointDataProcess.cpp)
add_library(datarecordlib src/Data_Record.cpp)
add_library(timecountlib src/TimerCounter.cpp)
add_library(MultiProcesslib src/Multi_Process.cpp)




add_executable(Seal_Demo main.cpp )
add_executable(safe_program safeCheck.cpp)
add_executable(printinfo printInfo.cpp)
target_link_libraries(Seal_Demo Tc_Adslib driverlib mtlib dplib datarecordlib timecountlib MultiProcesslib)
target_link_libraries(Seal_Demo ${PROJECT_SOURCE_DIR}/lib/TcAdsDll.lib)
target_link_libraries(safe_program Tc_Adslib driverlib dplib mtlib datarecordlib timecountlib MultiProcesslib)
target_link_libraries(safe_program ${PROJECT_SOURCE_DIR}/lib/TcAdsDll.lib)
